(lang dune 3.9)

(name p2pml)

(generate_opam_files true)

(source
 (github CharlesAverill/p2pml))

(authors "Charles Averill")

(maintainers "Charles Averill")

(license MIT)

(documentation https://github.com/CharlesAverill/p2pml)

(package
 (name p2pml)
 (synopsis "Distributed filesharing protocol")
 (description "Distributed filesharing protocol")
 (depends ocaml dune ocamlformat odoc))

